[project]
name = "flow-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "requests>=2.32.4",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.black]
target-version = ["py313"]
line-length = 88

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
