[project]
name = "flow-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "accelerate>=0.30.0",
    "diffusers>=0.27.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.0.0",
    "opencv-python>=4.9.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.4.0",
    "timm>=1.0.0",
    "torch==2.1.2",
    "torchdiffeq>=0.2.3",
    "torchvision==0.16.2",
    "tqdm>=4.65.0",
    "transformers<4.40.0",
    "wandb>=0.16.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ipykernel>=6.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.4.0",
]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"